--- a/PizzeriaNET.Client.Core/PizzeriaNET.Client.Core.csproj
+++ b/PizzeriaNET.Client.Core/PizzeriaNET.Client.Core.csproj
@@ -1,7 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="RestSharp" Version="106.11.7" />
+  </ItemGroup>
 
 </Project>
