--- a/PizzeriaNET.API/PizzeriaNET.API.csproj
+++ b/PizzeriaNET.API/PizzeriaNET.API.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
     <PackageReference Include="Npgsql" Version="3.1.8" />
+    <PackageReference Include="Sendgrid" Version="9.21.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
