Move email details to config file

--- a/PizzeriaNET.API/appsettings.json
+++ b/PizzeriaNET.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "NotificationConfig": {
+    "EmailSenderAddress": "noreply@pizzeria.wiktorkowalski.pl",
+    "EmailSenderTitle": "PizzeriaNET"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
