--- a/PizzeriaNET.Client.Core/PizzeriaNET.Client.Core.csproj
+++ b/PizzeriaNET.Client.Core/PizzeriaNET.Client.Core.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-rc.1.20451.14" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="RestSharp" Version="106.11.7" />
   </ItemGroup>
 
